# baseball

./: .gitignore  Cargo.toml
baseball/: Cargo.toml
baseball/src/: lib.rs  register.rs  transactions.rs
baseball/src/chadwick/: events.rs  gamelogs.rs  games.rs  mod.rs
baseball/src/lahman/: batting.rs  mod.rs  pitching.rs
baseball/src/retrosheet/game/: games.rs  mod.rs
python/: consecutive_starts.py  division_record.py  game_novelty.py  inning_runs.py  palindrome_streak.py  promotion_giveaways.py  re24.py  revenge_games.py  sf-dp.py  unique_slash_lines.py
retrosheet/: Cargo.toml
retrosheet/src/: lib.rs  transactions.rs
retrosheet/src/chadwick/: events.rs  mod.rs
retrosheet/src/game/: games.rs  mod.rs
src/: database.rs  gamelogs.rs  games.rs  internals.rs  lib.rs  main.rs  player.rs  retrosheet.rs  search.rs
src/html/: index.html  search.mjs
src/lahman/: mod.rs
src/retrosheet/: games.rs  mod.rs  transactions.rs
src/retrosheet/chadwick/: events.rs  games.rs  mod.rs
src/sql/: create_batting_gamelogs.sql  create_fielding_gamelogs.sql  create_games.sql  create_guts.sql  create_people.sql  create_pitching_gamelogs.sql
