[package]
name = "baseball"
version = "0.1.0"
authors = ["Sean Kelly <code@katron.org>"]
edition = "2021"

[dependencies]
retrosheet = { path = "retrosheet" }
cel-interpreter = "0.9.0"
clap = { version = "~4.4", features = ["derive"] }
csv = "1.0.0"
rayon = "1.8.1"
serde = { version = "1.0.43", features = ["derive"] }
serde_derive = "1.0.43"
